# sciscout

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
sciscout/: README.md  pyproject.toml
sciscout/sciscout/: __init__.py  cli.py  config.py
sciscout/sciscout.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
sciscout/sciscout/agents/: __init__.py  graph.py  reader.py  researcher.py  synthesizer.py
sciscout/sciscout/api/: __init__.py  server.py
sciscout/sciscout/llm/: __init__.py  base.py  cerebras.py  gemini.py  groq_client.py  openrouter.py  router.py
sciscout/sciscout/sources/: __init__.py  arxiv.py  base.py  doaj.py  europe_pmc.py  forums.py  github.py  nasa_ads.py  pubmed.py  scholar.py  semantic_scholar.py  stackoverflow.py  web.py  wikipedia.py
