[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sciscout"
version = "0.1.0"
description = "SciScout — Bilimsel ve mühendislik araştırma agentı (3-ajan döngüsü)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "SciScout Contributors" }]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "typer>=0.13",
    "rich>=13.7",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    "google-generativeai>=0.8",
    "groq>=0.11",
    "openai>=1.40",
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "langchain-google-genai>=2.0",
    "langchain-groq>=0.1",
    "arxiv>=2.1",
    "pymupdf>=1.24",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "tenacity>=8.4",
    "tiktoken>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "respx>=0.21",
]

[project.scripts]
sciscout = "sciscout.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["sciscout*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
